# openmind-omnn-rt

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: bins.cmake  omnn-rt-config.cmake.in
omnn/rt/: CMakeLists.txt  Prime.cpp
omnn/rt/tests/: Architecture_test.cpp  fastest_get.cpp
vcpkg-port/omnn-rt/: portfile.cmake  vcpkg.json
